objects/Post_Visit_Follow_Up_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Proposal_Information_Installation__c</fullName>
        <label>Proposal Information Installation</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Information_Permitting__c</fullName>
        <label>Proposal Information Permitting</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Information_System_Design_a__c</fullName>
        <label>Proposal Information System Design (a)</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Information_Tax_and_Incentives__c</fullName>
        <label>Proposal Information Tax and Incentives</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Information_Warranty__c</fullName>
        <label>Proposal Information Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Shortfall_Other__c</fullName>
        <label>Proposal Shortfall Other</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Shortfall__c</fullName>
        <inlineHelpText>Which of the  following  describes how the proposal fell short of your needs?  Choose as many as apply.</inlineHelpText>
        <label>Proposal Shortfall</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Proposal_Value__c</fullName>
        <inlineHelpText>How do you rate the overall value of the proposal received from the SunPower Dealer?</inlineHelpText>
        <label>Proposal-Value</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <inlineHelpText>Did you receive a proposal for a SunPower solar system?</inlineHelpText>
        <label>Proposal?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Email__c</fullName>
        <description>11/20/2014 Case 00426142 Requested by Kristel, to be used on survey templates.</description>
        <formula>Partner_Account__r.RSM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Name__c</fullName>
        <description>11/20/2014 Case 00426142 Requested by Kristel, to be used on survey templates.</description>
        <formula>Partner_Account__r.RSM__r.FirstName + &quot; &quot; + Partner_Account__r.RSM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Won_Lost__c</fullName>
        <description>We have created formula field as salesforce has limitation to pull cross object field values in Post Visit Followup Survey click tools notification.Please refer case# 00452669.</description>
        <formula>TEXT(Opportunity_ID__r.Reason_Won_Lost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Won/Lost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassign__c</fullName>
        <inlineHelpText>We&apos;re sorry to hear that you did not meet with the dealer OR Not contacted OR The Dealer did not set an appointment with you OR  The Dealer has not provided a proposal to you. Do you wish to be connected to another SunPower Dealer in your area?</inlineHelpText>
        <label>Reassign?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_by_Other__c</fullName>
        <label>Referred by Other</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <inlineHelpText>How were you referred to SunPower?</inlineHelpText>
        <label>Referred by</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Survey__c</fullName>
        <label>Status Survey</label>
        <picklist>
            <picklistValues>
                <fullName>Responded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1st Invitation Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Invitation Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Invitation Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opted Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Reason__c</fullName>
        <inlineHelpText>What is the main reason for your decision to stop pursuing this project?</inlineHelpText>
        <label>Stop Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Channel__c</fullName>
        <label>Survey Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Response_Date__c</fullName>
        <label>Survey Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Result_Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Result Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Result_number__c</fullName>
        <label>Survey Result number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Survey_link__c</fullName>
        <label>Survey link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>System_Design__c</fullName>
        <label>System Design</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timeline_quote__c</fullName>
        <inlineHelpText>When did you receive the proposal?</inlineHelpText>
        <label>Timeline quote</label>
        <picklist>
            <picklistValues>
                <fullName>On visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shortly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-Wait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No receive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During the meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within a week after the meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After more than a week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Post Visit Follow Up Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Visit Follow Up Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>